--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
       <artifactId>mssql-jdbc</artifactId>
       <version>6.2.2.jre8</version>
     </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.6</version>
+    </dependency>
   </dependencies>
 </project>
