--- a/.travis.yml
+++ b/.travis.yml
@@ -3,39 +3,4 @@ jdk: oraclejdk8
 services:
   - mysql
 before_install:
-  - mysql -e 'CREATE DATABASE RSOI_02;CREATE SCHEMA Account;
-CREATE SCHEMA Payment;
-CREATE SCHEMA Calls;
-GO
-CREATE TABLE Account.Users
-	(
-	ID int IDENTITY(1,1) PRIMARY KEY,
-	First_Name varchar(50) NOT NULL,
-	Last_Name varchar(50) NOT NULL,
-	Role int
-	);
-CREATE TABLE Account.Roles
-	(
-	ID_Role int IDENTITY(1,1) PRIMARY KEY,
-	Name_Role varchar(50) NOT NULL,
-	);
-
-CREATE TABLE Payment.Pursy
-	(
-	ID_Cash int IDENTITY(1,1) PRIMARY KEY,
-	Cash float,
-	ID_User int
-	);
-CREATE TABLE Payment.History
-	(
-	ID_Pay int IDENTITY(1,1) PRIMARY KEY,
-	Cash float,
-	ID_Call int
-	);
-
-CREATE TABLE Calls.History
-	(
-	ID_Call int IDENTITY(1,1) PRIMARY KEY,
-	Duration float,
-	ID_User int,
-	);'
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
