--- a/pom.xml
+++ b/pom.xml
@@ -3,38 +3,46 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sqlsamples</groupId>
   <artifactId>SqlServerSample</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
+
   <version>1.0.0</version>
   <name>SqlServerSample</name>
   <url>http://maven.apache.org</url>
+
   <properties>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
       <!-- your existing properties -->
   </properties>
+
   <dependencies>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
       <version>6.2.2.jre8</version>
     </dependency>
+
     <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.6</version>
     </dependency>
+
 	<dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
     <version>3.0.1</version>
     <scope>provided</scope>
 	</dependency>
+
   </dependencies>
 	
 	  <pluginRepositories>
