--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ jdk: oraclejdk8
 services:
   - mysql
 before_install:
-  - mysql -e 'CREATE DATABASE IF NOT EXISTS test; Exec sp_defaultdb @loginame='root', @defdb='test' '
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
+  - mysql -e 'ALTER LOGIN root WITH DEFAULT_DATABASE = 'test''
+  - mysql -e 'ALTER LOGIN root WITH PASSWORD = '''
