--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
     	<version>5.1.6</version>
     </dependency>
 
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.1.1</version>
+      </dependency>
+
 	<dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
