--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@ language: java
 jdk: oraclejdk8
 services:
   - mysql
-  
+  addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+
+dist: trusty
+
+sudo: required
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
+  - mysql -e 'USE test;'
