--- a/pom.xml
+++ b/pom.xml
@@ -113,8 +113,12 @@
         <artifactId>tomcat7-maven-plugin</artifactId>
         <version>2.2</version>
         <configuration>
-            <path>/</path>
-            <server>TomcatServer</server>
+            <path>/myapp</path>
+            <url>http://194.58.121.174:8080/manager/text</url>
+            <username>${mypersonallogin}</username>
+            <password>${mypersonalpassword}</password>
+            <server>TomcatServerRsoi</server>
+            <port>8080</port>
         </configuration>
     </plugin>
 </plugins>
