--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,8 @@
         <configuration>
             <path>/myapp</path>
             <url>http://194.58.121.174:8080/manager/text</url>
-            <username>${mylogin}</username>
-            <password>${mypassword}</password>
+            <username>${mypersonalloginvalue}</username>
+            <password>${mypersonalpasswordvalue}</password>
             <server>TomcatServerRsoi</server>
             <port>8080</port>
         </configuration>
