--- a/Payment/src/main/webapp/WEB-INF/web.xml
+++ b/Payment/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,6 @@
 
     <servlet-mapping>
         <servlet-name>PaymentName</servlet-name>
-        <url-pattern>/payment</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
