--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,15 @@
     <module>Payment</module>
     <module>Gateway</module>
 </modules>
+         
+ <plugins>
+    <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+            <server>TomcatServerRsoi</server>
+        </configuration>
+    </plugin>
+</plugins>
     </project>
