--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
             <server>TomcatServerRsoi</server>
         </configuration>
     </plugin>
+     <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.7</version>
+    <configuration>
+        <formats>
+            <format>html</format>
+            <format>xml</format>
+        </formats>
+        <check />
+    </configuration>
+    </plugin>
 </plugins>
          </build>
     </project>
