--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 
 deploy:
   provider: script
-  script: bash ./deploy.sh
+  script: bash ./deploy.sh; script: "mvn cobertura:cobertura"
   on:
     branch: master
     
