--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ env:
 
 deploy:
   provider: script
-  script: bash ./deploy.sh; script: "mvn cobertura:cobertura"
+  script: 
+    -bash ./deploy.sh
+    -mvn cobertura:cobertura
   on:
     branch: master
     
