--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>deploying-spring-boot-as-war-on-tomcat</name>
+	<name>proj3</name>
 	<description>Deploying Spring Boot as WAR on tomcat</description>
 
 	<parent>
