--- a/Payment/pom.xml
+++ b/Payment/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.manfredwind</groupId>
-	<artifactId>deploying-spring-boot-as-war-on-tomcat</artifactId>
+	<artifactId>proj4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
